--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -35,5 +35,6 @@
         android:text="@string/donateButton"
         android:id="@+id/donateButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="donateButtonPressed"/>
 </RelativeLayout>
