--- a/app/src/main/res/menu/menu_donate.xml
+++ b/app/src/main/res/menu/menu_donate.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="app.donation.Donate">
+      tools:context=".activity.Donate">
 
   <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
@@ -12,4 +12,10 @@
       android:id="@+id/menuReport"
       android:orderInCategory="100"
       android:title="@string/menuReport"/>
+
+  <item
+      android:id="@+id/menuLogout"
+      android:orderInCategory="100"
+      android:title="@string/menuLogout"/>
+
 </menu>
